# foxsite

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: graphql_schema.rs  handlers.rs  main.rs  models.rs
frontend/: Cargo.toml  index.html
frontend/assets/styles/: main.css  theme.css
frontend/src/: lib.rs  router.rs
frontend/src/components/: about_page.rs  community_page.rs  features_page.rs  footer.rs  header.rs  home_page.rs  mining_page.rs  mod.rs  navigation.rs  wallet_page.rs
frontend/src/graphql/: mutations.rs  queries.rs
